observability/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: observability
  labels:
    app: loki
spec:
  type: NodePort
  ports:
  - port: 3100
    targetPort: 3100
    nodePort: 30310
    protocol: TCP
    name: http-metrics
  selector:
    app: loki
